Fix overflow

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,7 @@
 .main {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
     height: 100vh;
     width: 100vw;
     top: 0px;
@@ -20,6 +19,13 @@
   font-family: sans-serif;
   background-color: #000;
   color: #fff;
+}
+
+.planets_container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: calc(100vh - 64px);
 }
 
 .mars_container {
